footer section mobile responsive issue fixed

--- a/mobile/style.css
+++ b/mobile/style.css
@@ -202,7 +202,7 @@ footer{
 }
 
 .footer-container{
-    padding: 2rem 1.25rem;
+    padding: 2rem 6rem;
 
 }
 
@@ -226,6 +226,7 @@ footer{
 
 .copy-right{
     font-size: 0.75rem;
+    text-align: center;
 }
 
 
